solc_ossfuzz_seed_corpus/test_sol/test_c2d2d25bd0779a31b5ba15601e442d914db347e638830dd99d83d06f43a518da_4ac5a06ccb36f074d74dce04bb6ca31e53c00863_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(uint16 i0)      returns(int72 o0,uint128 o1){
  o0 -= ((false ? int72((0x0000000000000000000000000000000000000008 f1 /*suffix expr*/ / int72(2361183241434822606847))) : int72(0)) & int72(0));
  if (i0 >= (false ? uint16(65535) : (uint16((uint16(0) / uint16(65535))) | uint16(65535))))
  {
    revert(0 f2 /*suffix expr*/);
  }
  else
  {
    for(uint solinit0 = 0; solinit0 < (payable(address(0x0000000000000000000000000000000000000003)).balance % 11); solinit0++)
    {
      return (int72(2361183241434822606847), ((((uint128(uint16(0)) & uint128(224457658956174288212678130361631193115)) + uint128(0)) << uint64(uint64(11553605154665773519))) << uint8(uint8(255))));
    }
  }
}
struct St0 {
  function (function (address, function (uint24) external   returns (bytes memory)) external   returns (int168, address, int160), int256, address) external   returns (address payable) el0;
}
pragma solidity >= 0.0.0;
function f1(address i0) pure suffix  returns(int72 o0)
{
}
function f2(uint80 i0) pure suffix  returns(string memory o0)
{
  (int72 l0, uint128 l1) = f0({i0: uint16(65535)});
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
error er0();
struct St1 {
  bool el0;
  function (bytes5, bytes memory) external   el1;
}
struct St2 {
  uint248 el0;
}
// ----
// Warning 5740: (su0.sol:465-475): Unreachable code.
// Warning 5667: (su0.sol:995-1004): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:1027-1043): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:1050-1058): Unused local variable.
// Warning 2072: (su0.sol:1060-1070): Unused local variable.
// Warning 2018: (su0.sol:0-693): Function state mutability can be restricted to view
// TypeError 8961: (su0.sol:1074-1097): Function cannot be declared as pure because this expression (potentially) modifies the state.
